src/App.css
.popup__controls,
.popup__nav-list {
  list-style-type: none;
}

.popup__controls--hidden {
  visibility: hidden;
}

.popup {
  width: 176px;
  padding: 10px;
  color: #fff;
  background: linear-gradient(180deg, #2c2c2c, #1a1a1a);
}

.popup__controls {
  display: grid;
  align-items: center;
  grid-template-columns: auto auto 1fr;
  gap: 10px;
  margin: 0;
  padding: 0;
}

.popup__control {
  padding: 5px;
  font: inherit;
  color: #fff;
  background-color: rgb(65 65 65 / 73%);
  border-color: transparent;
  border-radius: 50%;
  border-style: solid;
  border-width: 1px;
  cursor: pointer;
}

.popup__control:hover {
  background-color: #51515199;
}

.popup__control:active {
  background-color: #4d4d4dc4;
}

.popup__control--expand {
  margin-left: auto;
}

.popup__nav {
  position: absolute;
  right: 10px;
  bottom: 59px;
  font-size: 15px;
  color: white;
}
.popup__nav-item {
  padding-bottom: 7px;
}

.popup__main {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 30px;
}
.popup__status {
  font-size: 13px;
  user-select: none;
}
.popup__toggle {
  position: relative;
  display: inline-block;
  width: 65px;
  height: 29px;
}

.popup__toggle input {
  position: absolute;
  width: 0;
  height: 0;
  opacity: 0;
}

.popup__slider {
  position: absolute;
  width: 65px;
  height: 29px;
  font-size: 0;
  background-color: #2c2c2c;
  transition: 0.4s;
  cursor: pointer;
}

.popup__slider::before {
  content: "";
  position: absolute;
  bottom: 2px;
  left: 4px;
  width: 25px;
  height: 25px;
  background-color: #fff;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .popup__slider {
  background-color: rgb(192, 26, 26);
}

input:focus + .popup__slider {
  box-shadow: 0 0 1px rgb (64, 83, 99);
}

input:checked + .popup__slider::before {
  -webkit-transform: translateX(32px);
  -ms-transform: translateX(32px);
  transform: translateX(32px);
}

.popup__slider.popup__slider--round {
  border-radius: 34px;
}

.popup__slider.popup__slider--round::before {
  border-radius: 50%;
}

.popup__footer {
  margin-top: 55px;
  padding-bottom: 10px;
}

.popup__link {
  display: flex;
  align-items: center;
  text-decoration: none;
  color: white;
}

.popup__title {
  padding-left: 5px;
  font-size: 13px;
}

.popup__description {
  margin-top: 4px;
  margin-bottom: 0;
  font-size: 11px;
}

.popup__tip {
  display: flex;
  margin-top: 5px;
  margin-bottom: 0;
  margin-left: -1px;
  font-size: 10px;
  font-weight: bold;
  color: #ffd679;
}

.popup__fake-progress-bar {
  width: 100%;
  height: 2px;
  background-color: red;
}

.popup__fake-progress-bar::before {
  content: "";
  position: absolute;
  right: 10px;
  width: 50%;
  height: 2px;
  background-color: white;
}

.popup__fake-progress-bar::after {
  content: "";
  position: absolute;
  bottom: 7px;
  left: 86px;
  width: 2px;
  height: 2px;
  background-color: red;
  border: solid;
  border-radius: 50%;
  border-color: red;
}

